<resources>
    <string name="app_name">bright_soul</string>

    <string name="pesan">PESAN</string>
    <string name="dr_ribka_rahayu_spkj">Dr. Ribka Rahayu. SpKJ</string>
    <string name="psikiater_klinis">Psikiater Klinis</string>

    <string name="todo">TODO</string>
    <string name="lanjut">LANJUT</string>
    <string name="rumah_sakit_lavalette">Rumah Sakit Lavalette</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telephone">Nomor Telephone</string>
    <string name="title_activity_pilihmetode">PilihmetodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="splash_page_1">
        <p>Sudahilah sedihmu, mari bertukar</p>
        <p>pikiran untuk hal lebih baik.</p>
        <p>Cerahkan jiwa, cemerlangkan hati</p>
        <p>dan pikiran</p>
    </string>
    <string name="better_life">BETTER LIFE</string>
    <string name="brightsoul">#BRIGHTSOUL</string>
    <string name="meditate">MEDITATE</string>
    <string name="splash_page_2">
        <p>Tenangkan pikiran agar hidup lebih</p>
        <p>imbang! </p>
        <p> Sehatkan jiwa, sehatkan pikiran </p>
    </string>
    <string name="gain_friends">GAIN FRIENDS</string>
    <string name="splash_page_3">
        <p> Dapatkan teman baru yang seru untuk</p>
        menghiburmu</string>
    <string name="sign_up_text_1">Sehatkan jiwa hanya di Bright Soul</string>
    <string name="sign_up_text_2">
        <p>Gabung dan nikmati kemudahan </p>
        <p>berkonsultasi</p>
    </string>
    <string name="masuk">Masuk</string>
    <string name="email_atau_nomor_telepon">Email atau Nomor Telepon</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="remember_me">Remember me</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>