<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formdr">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonback"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="320dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="328dp"
            android:layout_height="625dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg" />

        <ImageView
            android:id="@+id/bgpesan2"
            android:layout_width="332dp"
            android:layout_height="66dp"
            android:layout_alignStart="@+id/background"
            android:layout_alignTop="@+id/background"
            android:layout_alignEnd="@+id/background"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="50dp"
            app:srcCompat="@drawable/buttonbg" />

        <TextView
            android:id="@+id/pesan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/bgpesan2"
            android:layout_alignTop="@id/bgpesan2"
            android:layout_alignEnd="@id/bgpesan2"
            android:layout_alignBottom="@id/bgpesan2"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pesan"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="277dp"
            android:layout_height="168dp"
            android:layout_alignStart="@+id/background"
            android:layout_alignTop="@id/background"
            android:layout_alignEnd="@+id/background"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/profil" />

        <TextView
            android:id="@+id/namadokter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignEnd="@id/background"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dr_ribka_rahayu_spkj"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/namarumahsakit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/spesialisasi2"
            android:layout_alignEnd="@id/background"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/rumah_sakit_lavalette"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/spesialisasi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/namadokter2"
            android:layout_alignEnd="@id/background"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/psikiater_klinis"
            android:textAlignment="center"
            android:textColor="#393737"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/inputnama2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/namarumahsakit2"
            android:layout_alignEnd="@id/background"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputemail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/inputnama2"
            android:layout_alignEnd="@id/background"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputdate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/inputphone2"
            android:layout_alignEnd="@id/background"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="Date"
            android:inputType="date"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputtipe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/inputdate2"
            android:layout_alignEnd="@id/background"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="Tipe"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputphone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/background"
            android:layout_alignTop="@id/inputemail2"
            android:layout_alignEnd="@id/background"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="Phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/buttonlanjut"
            android:layout_width="237dp"
            android:layout_height="55dp"
            android:layout_alignStart="@+id/background"
            android:layout_alignEnd="@+id/background"
            android:layout_alignBottom="@id/background"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="89dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/buttonbg2"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textlanjut2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/buttonlanjut"
            android:layout_alignTop="@id/buttonlanjut"
            android:layout_alignEnd="@id/buttonlanjut"
            android:layout_alignBottom="@id/buttonlanjut"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="LANJUT"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </RelativeLayout>
</ScrollView>