<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".register">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@+id/img1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/sign_up_text_1"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="276dp"
            android:gravity="center"
            android:text="@string/sign_up_text_2"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        <ImageView-->
        <!--            android:id="@+id/img2"-->
        <!--            android:layout_width="340dp"-->
        <!--            android:layout_height="380dp"-->
        <!--            android:layout_below="@+id/txt2"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:src="@drawable/rectangle_1" />-->

        <androidx.cardview.widget.CardView
            android:id="@+id/btn"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_below="@+id/txt2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_login"
            app:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Daftar Sekarang"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Sudah punya akun? Masuk"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="23dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/email_atau_nomor_telepon"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edittxt1"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_login"
                    android:fontFamily="@font/roboto"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/kata_sandi"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edittxt2"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_login"
                    android:fontFamily="@font/roboto"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/imgBtn1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center_horizontal"
                    android:text="Daftar"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:backgroundTint="#DFEEEA" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--        <TextView-->
        <!--            android:id="@+id/txt3"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="29dp"-->
        <!--            android:layout_alignTop="@+id/img2"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginStart="84dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:text="Daftar Sekarang"-->
        <!--            android:textSize="24sp" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/txt4"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="22dp"-->
        <!--            android:layout_below="@+id/txt3"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="3dp"-->
        <!--            android:text="Sudah punya akun? Masuk"-->
        <!--            android:textSize="18sp" />-->

        <!--        <TextView-->
        <!--            android:id="@id/txt5"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="22dp"-->
        <!--            android:layout_below="@+id/txt4"-->
        <!--            android:layout_alignStart="@+id/img2"-->
        <!--            android:layout_alignEnd="@+id/img2"-->
        <!--            android:layout_marginStart="45dp"-->
        <!--            android:layout_marginTop="23dp"-->
        <!--            android:layout_marginEnd="83dp"-->
        <!--            android:text="Email atau Nomor Telepon"-->
        <!--            android:textSize="18sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/edittxt1"-->
        <!--            android:layout_width="260dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_below="@+id/txt5"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="4dp"-->
        <!--            android:background="@drawable/rectangle_2" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/txt6"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/edittxt1"-->
        <!--            android:layout_alignStart="@+id/img2"-->
        <!--            android:layout_alignEnd="@+id/img2"-->
        <!--            android:layout_marginStart="45dp"-->
        <!--            android:layout_marginTop="17dp"-->
        <!--            android:layout_marginEnd="187dp"-->
        <!--            android:text="Kata Sandi"-->
        <!--            android:textSize="18sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/edittxt2"-->
        <!--            android:layout_width="260dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_below="@+id/txt6"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="1dp"-->
        <!--            android:background="@drawable/rectangle_2" />-->

        <!--        <ImageButton-->
        <!--            android:id="@+id/imgBtn1"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_below="@+id/edittxt2"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:src="@drawable/daftar" />-->
    </RelativeLayout>
</ScrollView>