<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".splashpage3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp"
            android:src="@drawable/splash3" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="200dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/brightsoul"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:text="@string/gain_friends"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:text="@string/splash_page_3"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="348dp"
            android:src="@drawable/ic_elips" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="71dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="320dp"
            android:src="@drawable/ic_elips" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="292dp"
            android:src="@drawable/ic_elipsbold" />

        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="329dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="52dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_next" />
    </RelativeLayout>
</ScrollView>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<ScrollView-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent">-->

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView1"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="26dp"-->
    <!--            android:layout_marginStart="41dp"-->
    <!--            android:layout_marginTop="40dp"-->
    <!--            android:fontFamily="@font/roboto_bold"-->
    <!--            android:text="@string/brightsoul"-->
    <!--            android:textSize="17sp"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/img1"-->
    <!--            android:layout_width="380dp"-->
    <!--            android:layout_height="380dp"-->
    <!--            android:src="@drawable/splash3"-->
    <!--            android:layout_marginTop="64dp"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView1"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView2"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="45dp"-->
    <!--            android:text="@string/gain_friends"-->
    <!--            android:textSize="30sp"-->
    <!--            android:layout_marginStart="41dp"-->
    <!--            android:layout_marginTop="0dp"-->
    <!--            android:fontFamily="@font/roboto_bold"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/img1"-->
    <!--            app:layout_constraintStart_toStartOf="parent"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView3"-->
    <!--            android:layout_width="277dp"-->
    <!--            android:layout_height="90dp"-->
    <!--            android:text="@string/splash_page_3"-->
    <!--            android:textSize="17sp"-->
    <!--            android:layout_marginStart="43dp"-->
    <!--            android:fontFamily="@font/roboto_bold"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
    <!--            app:layout_constraintStart_toStartOf="parent"/>-->

    <!--        <ImageView-->
    <!--            android:id="@+id/img2"-->
    <!--            android:layout_width="20dp"-->
    <!--            android:layout_height="20dp"-->
    <!--            android:src="@drawable/ic_elips"-->
    <!--            android:layout_marginStart="43dp"-->
    <!--            android:layout_marginTop="55dp"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView3"/>-->
    <!--        <ImageView-->
    <!--            android:layout_width="20dp"-->
    <!--            android:layout_height="20dp"-->
    <!--            android:src="@drawable/ic_elips"-->
    <!--            android:layout_marginStart="71dp"-->
    <!--            android:layout_marginTop="55dp"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView3"/>-->
    <!--        <ImageView-->
    <!--            android:id="@+id/img3"-->
    <!--            android:layout_width="20dp"-->
    <!--            android:layout_height="20dp"-->
    <!--            android:src="@drawable/ic_elipsbold"-->
    <!--            android:layout_marginStart="99dp"-->
    <!--            android:layout_marginTop="55dp"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView3"/>-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/btn1"-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_marginStart="329dp"-->
    <!--            android:layout_marginTop="50dp"-->
    <!--            android:src="@drawable/ic_next"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView3"-->
    <!--            tools:ignore="SpeakableTextPresentCheck" />-->
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <!--</ScrollView>-->